--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ Ansible lint:
   tags:
     - aws
 
-Docker ggr:
+.Docker ggr:
   stage: deployment test
   script:
     - molecule test -s default
@@ -41,7 +41,7 @@ AWS ggr:
   tags:
     - aws
 
-EPC ggr:
+.EPC ggr:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
