--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,29 +1,13 @@
 ---
 # handlers file for ggr
-- name: started ggr.service systemd
+- name: Restart ggr.service
   systemd:
-    state: started
-    enabled: true
+    state: restarted
     name: ggr
   become: true
 
-- name: started ggr-ui.service systemd
+- name: Restart ggr-ui.service
   systemd:
-    state: started
-    enabled: true
+    state: restarted
     name: ggr-ui
   become: true
-
-# - name: started selenoid-ui.service systemd
-#   systemd:
-#     state: restarted
-#     enabled: true
-#     name: selenoid-ui
-#   become: true
-
-# - name: started consul-template.service systemd
-#   systemd:
-#     state: restarted
-#     enabled: true
-#     name: consul-template
-#   become: true
