--- a/molecule/cloud-aws-direct/molecule.yml
+++ b/molecule/cloud-aws-direct/molecule.yml
@@ -27,6 +27,7 @@ platforms:
 
   - name: test-aws-amazon2-ggr
     image: ami-0b898040803850657
+    platform: amazon2
     instance_type: m5.large
     region: us-east-1
     vpc_subnet_id: subnet-0f2b9cd66faea38af
@@ -39,20 +40,20 @@ platforms:
     groups:
       - rhel_family
 
-  - name: test-aws-ubuntu18-ggr
-    image: ami-012fd5eb46f56731f
-    platform: ubuntu18
-    instance_type: m5.large
-    region: us-east-1
-    vpc_subnet_id: subnet-0f2b9cd66faea38af
-    assign_public_ip: False
-    security_group_name:
-      - default
-    spot_price: 0.04
-    wait_timeout: 1800
-    ssh_user: ubuntu
-    groups:
-      - debian_family
+  # - name: test-aws-ubuntu18-ggr
+  #   image: ami-012fd5eb46f56731f
+  #   platform: ubuntu18
+  #   instance_type: m5.large
+  #   region: us-east-1
+  #   vpc_subnet_id: subnet-0f2b9cd66faea38af
+  #   assign_public_ip: False
+  #   security_group_name:
+  #     - default
+  #   spot_price: 0.04
+  #   wait_timeout: 1800
+  #   ssh_user: ubuntu
+  #   groups:
+  #     - debian_family
 
   - name: test-aws-Debian9-ggr
     image: ami-003f19e0e687de1cd
