--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -77,7 +77,7 @@
         mode: 0774
       loop: '{{ ggt_init_script }}'
       notify:
-        - started {{ item }} systemd
+        - Restart {{ item }}
 
     - name: Configure Go Grid Router quota
       copy:
@@ -87,7 +87,6 @@
         owner: '{{ ggr_user }}'
         group: '{{ ggr_user }}'
       loop: '{{ ggr_config }}'
-      become: true
 
     - name: Configure Go Grid Router users
       htpasswd:
@@ -102,4 +101,15 @@
           value: 'SuperSecretPass098123'
         - key: health
           value: 'health'
+
+    - name: started ggr services systemd
+      systemd:
+        state: started
+        enabled: true
+        name: '{{ ggr_service_item }}'
+      loop:
+        - ggr
+        - ggr-ui
+      loop_control:
+        loop_var: ggr_service_item
   become: true
