Add Reload systemd configuration
Signed-off-by: Timur Gadiev <Timur_Gadiev@epam.com>

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,10 @@
 ---
 # handlers file for ggr
+- name: Reload systemd configuration
+  systemd:
+    daemon_reload: true
+  become: true
+
 - name: Restart ggr.service
   systemd:
     state: restarted
