--- a/molecule/cloud-aws-direct/playbook.yml
+++ b/molecule/cloud-aws-direct/playbook.yml
@@ -1,6 +1,7 @@
 ---
 - name: Converge
-  hosts: consul_instances
+  hosts: all
   roles:
     - role: ansible-consul
+      consul_group_name: consul_instances
     - role: ansible-role-ggr
