--- a/molecule/cloud-aws-direct/playbook.yml
+++ b/molecule/cloud-aws-direct/playbook.yml
@@ -1,6 +1,8 @@
 ---
 - name: Converge
   hosts: consul_instances
+  become: true
+  become_user: root
   roles:
     - role: ansible-consul
       consul_group_name: consul_instances
