--- a/molecule/cloud-aws-direct/playbook.yml
+++ b/molecule/cloud-aws-direct/playbook.yml
@@ -4,6 +4,8 @@
   become: true
   become_user: root
   roles:
-    - role: ansible-consul
+    - role: brianshumate.consul
       consul_group_name: consul_instances
     - role: ansible-role-ggr
+  vars:
+    consul_raw_key: ''
