--- a/molecule/cloud-aws-direct/playbook.yml
+++ b/molecule/cloud-aws-direct/playbook.yml
@@ -2,7 +2,7 @@
 - name: Converge
   hosts: consul_instances
   become: true
-  become_user: root
+  #become_user: root
   roles:
     - role: brianshumate.consul
       consul_group_name: consul_instances
