--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,7 @@ AWS ggr:
     AWS_REGION: us-east-1
   stage: deployment test
   script:
+    - apk add --no-cache unzip
     - molecule test -s cloud-aws-direct
   tags:
     - aws
