--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
   - deployment test
 
 before_script:
+  - pip install netaddr
   - rm -rf molecule/resources/provisioning
   - ansible --version
   - ansible-lint --version
