--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -82,7 +82,7 @@
       loop: '{{ ggt_init_script }}'
       notify:
         - Reload systemd configuration
-        - Restart {{ item }}
+        #- Restart {{ item }}
 
     - name: Configure Go Grid Router quota
       copy:
