--- a/molecule/resources/tests/verify.yml
+++ b/molecule/resources/tests/verify.yml
@@ -3,11 +3,6 @@
 - name: Verify
   hosts: all
   tasks:
-#
-#    - name: Debug ansible_facts.services
-#      debug:
-#        var: ansible_facts.services
-
     - name: Reset failed ggr
       command: systemctl reset-failed ggr.service
       become: true
@@ -40,6 +35,10 @@
 
     - name: Populate service facts
       service_facts:
+
+    - name: Debug ansible_facts.services
+      debug:
+        var: ansible_facts.services
 
     - name: Assert that ggr services are running
       assert:
