--- a/molecule/resources/tests/verify.yml
+++ b/molecule/resources/tests/verify.yml
@@ -40,6 +40,14 @@
       debug:
         var: ansible_facts.services
 
+    - name: Debug
+      debug:
+        var: ansible_facts.services['ggr.service'].state
+
+    - name: Debug
+        debug:
+          var: ansible_facts.services['ggr-ui.service'].state
+
     - name: Assert that ggr services are running
       assert:
         that:
