--- a/molecule/resources/prepare.yml
+++ b/molecule/resources/prepare.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install Consul
   hosts: consul_instances
+  become: true
   roles:
     - role: brianshumate.consul
       consul_group_name: consul_instances
