--- a/molecule/resources/prepare.yml
+++ b/molecule/resources/prepare.yml
@@ -10,9 +10,9 @@
   post_tasks:
     - name: Configure Go Grid Router quota
       copy:
-        dest: '{{ home_ggr }}/go-grid-router/quota'
-        src: '{{ role_path }}/files/ggr-config-example.xml'
+        dest: '/home/ggr/go-grid-router/quota'
+        src: '../../files/ggr-config-example.xml'
         mode: 0664
-        owner: '{{ ggr_user }}'
-        group: '{{ ggr_user }}'
+        owner: 'ggr'
+        group: 'ggr'
       become: true
