--- a/molecule/resources/tests/verify.yml
+++ b/molecule/resources/tests/verify.yml
@@ -2,6 +2,7 @@
 # This is an example playbook to execute Ansible tests.
 - name: Verify
   hosts: all
+  become: true
   tasks:
     - name: Populate service facts
       service_facts:
