--- a/molecule/resources/tests/verify.yml
+++ b/molecule/resources/tests/verify.yml
@@ -23,7 +23,7 @@
     - name: Restart selenoid-ui.service
       systemd:
         state: restarted
-        name: {{ item.key }}
+        name: "{{ item.key }}"
       loop:
         - key: ggr
         - key: ggr-ui
