--- a/molecule/cloud-aws-direct/molecule.yml
+++ b/molecule/cloud-aws-direct/molecule.yml
@@ -56,6 +56,7 @@ platforms:
     ssh_user: ubuntu
     groups:
       - debian_family
+      - consul_instances
 
   - name: test-aws-Debian9-ggr
     image: ami-003f19e0e687de1cd
@@ -71,6 +72,7 @@ platforms:
     ssh_user: admin
     groups:
       - debian_family
+      - consul_instances
 
 provisioner:
   name: ansible
