--- a/molecule/resources/tests/verify.yml
+++ b/molecule/resources/tests/verify.yml
@@ -7,7 +7,7 @@
     - name: Configure Go Grid Router quota
       copy:
         dest: '/home/ggr/go-grid-router/quota'
-        src: '/builds/lean-delivery/ansible-role-ggr/files/ggr-config-example.xml'
+        src: '../../files/ggr-config-example.xml'
         mode: 0664
         owner: 'ggr'
         group: 'ggr'
