--- a/molecule/cloud-epc-delegated/molecule.yml
+++ b/molecule/cloud-epc-delegated/molecule.yml
@@ -17,6 +17,7 @@ platforms:
     wait_timeout: 3600
     groups:
       - rhel_family
+      - consul_instances
   - name: test-epc-ubuntu1804-ggr
     image: Ubuntu18.04_64-bit
     shape: small
@@ -24,6 +25,7 @@ platforms:
     wait_timeout: 3600
     groups:
       - debian_family
+      - consul_instances
 provisioner:
   name: ansible
   log: True
