--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -15,6 +15,8 @@ platforms:
     privileged: True
     groups:
       - rhel_family
+      - consul_instances
+
   - name: test-docker-ubuntu1804-ggr
     image: leandelivery/docker-systemd:ubuntu-18.04
     privileged: True
@@ -29,6 +31,7 @@ platforms:
       - SYS_ADMIN
     groups:
       - debian_family
+      - consul_instances
 provisioner:
   name: ansible
   # log: True
