--- a/molecule/cloud-aws-direct/molecule.yml
+++ b/molecule/cloud-aws-direct/molecule.yml
@@ -42,21 +42,21 @@ platforms:
       - rhel_family
       - consul_instances
 
-#  - name: test-aws-ubuntu18-ggr
-#    image: ami-012fd5eb46f56731f
-#    platform: ubuntu18
-#    instance_type: m5.large
-#    region: us-east-1
-#    vpc_subnet_id: subnet-0f2b9cd66faea38af
-#    assign_public_ip: False
-#    security_group_name:
-#      - default
-#    spot_price: 0.04
-#    wait_timeout: 1800
-#    ssh_user: ubuntu
-#    groups:
-#      - debian_family
-#      - consul_instances
+  - name: test-aws-ubuntu18-ggr
+    image: ami-012fd5eb46f56731f
+    platform: ubuntu18
+    instance_type: m5.large
+    region: us-east-1
+    vpc_subnet_id: subnet-0f2b9cd66faea38af
+    assign_public_ip: False
+    security_group_name:
+      - default
+    spot_price: 0.04
+    wait_timeout: 1800
+    ssh_user: ubuntu
+    groups:
+      - debian_family
+      - consul_instances
 
   - name: test-aws-Debian9-ggr
     image: ami-003f19e0e687de1cd
