--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,12 +17,12 @@
       register: installed_packages
       until: installed_packages is succeeded
 
-    - name: 'Install pip package'
-      package:
-        name: python-pip
-        state: present
-      register: status
-      until: status is succeeded
+#    - name: 'Install pip package'
+#      package:
+#        name: python-pip
+#        state: present
+#      register: status
+#      until: status is succeeded
 
     - name: Install passlib
       pip:
