--- a/molecule/cloud-aws-direct/playbook.yml
+++ b/molecule/cloud-aws-direct/playbook.yml
@@ -3,5 +3,5 @@
   hosts: consul_instances
   become: true
   #become_user: root
-  roles:
-    - role: ansible-role-ggr
+  # roles:
+    # - role: ansible-role-ggr
