--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,14 @@
   loop_control:
     loop_var: distribution
 
+- name: Configure and install packages for current OS
+  include_tasks: '{{ platform_tasks }}'
+  with_first_found:
+    - '{{ ansible_os_family }}.yml'
+    - not-supported.yml
+  loop_control:
+    loop_var: platform_tasks
+
 - name: Become block
   block:
     - name: Install requirements
