--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,7 @@
 - name: Configure and install packages for current OS
   include_tasks: '{{ platform_tasks }}'
   with_first_found:
+    - '{{ ansible_distribution }}.yml'
     - '{{ ansible_os_family }}.yml'
     - not-supported.yml
   loop_control:
@@ -24,19 +25,6 @@
         state: present
       register: installed_packages
       until: installed_packages is succeeded
-
-    - name: add universe repository for bionic
-      apt_repository:
-        repo: deb http://archive.ubuntu.com/ubuntu bionic universe
-        state: present
-      when: ansible_os_family == "Debian"
-
-#    - name: 'Install pip package'
-#      package:
-#        name: python-pip
-#        state: present
-#      register: status
-#      until: status is succeeded
 
     - name: Install passlib
       pip:
