--- a/molecule/cloud-aws-direct/playbook.yml
+++ b/molecule/cloud-aws-direct/playbook.yml
@@ -2,6 +2,5 @@
 - name: Converge
   hosts: consul_instances
   become: true
-  #become_user: root
-  # roles:
-    # - role: ansible-role-ggr
+  roles:
+    - role: ansible-role-ggr
