--- a/molecule/cloud-aws-direct/playbook.yml
+++ b/molecule/cloud-aws-direct/playbook.yml
@@ -4,3 +4,11 @@
   become: true
   roles:
     - role: ansible-role-ggr
+  post_tasks:
+    - name: Configure Go Grid Router quota
+      copy:
+        src: 'ggr-config-example.xml'
+        dest: '/home/ggr/go-grid-router/quota'
+        mode: 0664
+        owner: ggr
+        group: ggr
