Fix python install
Signed-off-by: Timur Gadiev <Timur_Gadiev@epam.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,7 +15,7 @@
         - '{{ ansible_distribution }}.yml'
         - '{{ ansible_os_family }}.yml'
         - not-supported.yml
-      skip: true
+      ignore: true
   loop_control:
     loop_var: platform_tasks
 
