--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -5,7 +5,7 @@
     state: present
   become: true
 
-- name: python3-pip
+- name: Install python3-pip
   apt:
     name: python3-pip
     state: present
