--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install EPEL repo.
   yum:
-    name: 'https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm'
+    name: 'https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm'
     state: present
   register: epel_repo_install
   until: epel_repo_install is succeeded
