--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,9 +1,9 @@
 ---
-- name: Install python3-pip
+- name: Install python-pip
   apt:
-    name: python3-pip
+    name: python-pip
     state: present
     update_cache: true
-  register: python3_install
-  until: python3_install is succeeded
+  register: pip_install
+  until: pip_install is succeeded
   become: true
