--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,6 +25,8 @@
       apt:
         name: setuptools
         update_cache: yes
+      register: installed_packages
+      until: installed_packages is succeeded
       when: ansible_os_family == "Debian"
 
     - name: Install requirements
