Test updated tasks
Signed-off-by: Timur Gadiev <Timur_Gadiev@epam.com>

--- a/molecule/cloud-aws-direct/playbook.yml
+++ b/molecule/cloud-aws-direct/playbook.yml
@@ -4,7 +4,7 @@
   become: true
   roles:
     - role: ansible-role-ggr
-  post_tasks:
+  tasks:
     - name: Configure Go Grid Router quota
       copy:
         src: ggr-config-example.xml
