--- a/molecule/cloud-epc-delegated/playbook.yml
+++ b/molecule/cloud-epc-delegated/playbook.yml
@@ -2,6 +2,13 @@
 - name: Converge
   hosts: consul_instances
   become: true
-  #become_user: root
   roles:
     - role: ansible-role-ggr
+  tasks:
+    - name: Configure Go Grid Router quota
+      copy:
+        src: ggr-config-example.xml
+        dest: /home/ggr/go-grid-router/quota
+        mode: 0664
+        owner: ggr
+        group: ggr
