--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,9 +1,19 @@
 ---
 - name: Install python-pip
   apt:
-    name: python-pip
+    name:
+      - python-pip
+      - python-setuptools
     state: present
     update_cache: true
   register: pip_install
   until: pip_install is succeeded
   become: true
+
+# - name: Install setuptools
+#   apt:
+#     name: python-setuptools
+#     update_cache: true
+#   register: installed_packages
+#   until: installed_packages is succeeded
+#   become: true
