--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,8 +1,16 @@
 ---
-- name: Install EPEL repo.
+- name: Install EPEL repo
   yum:
-    name: 'https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm'
+    name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
     state: present
   register: epel_repo_install
   until: epel_repo_install is succeeded
+  become: true
+
+- name: Install python-pip
+  yum:
+    name: python-pip
+    state: present
+  register: python_pip_install
+  until: python_pip_install is succeeded
   become: true
