--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -7,7 +7,9 @@
 
 - name: Install python3-pip
   apt:
-    name: python3-pip
+    name:
+      - python3-pip
+      - python-setuptools
     state: present
     update_cache: true
   register: python3_install
