--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,20 +21,12 @@
 
 - name: Become block
   block:
-    - name: Install setuptools
-      apt:
-        name: python-setuptools
-        update_cache: true
-      register: installed_packages
-      until: installed_packages is succeeded
-      when: ansible_os_family == "Debian"
-
-    - name: Install requirements
-      package:
-        name: '{{ ggr_requirements }}'
-        state: present
-      register: installed_packages
-      until: installed_packages is succeeded
+    # - name: Install requirements
+    #   package:
+    #     name: '{{ ggr_requirements }}'
+    #     state: present
+    #   register: installed_packages
+    #   until: installed_packages is succeeded
 
     - name: Install passlib
       pip:
