--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -7,19 +7,13 @@
 
 - name: Install python3-pip
   apt:
-    name: python3-pip
+    name:
+      - python3-pip
+      - python-pip
+      - python-setuptools
+      - python-passlib
     state: present
     update_cache: true
   register: python3_install
   until: python3_install is succeeded
-  become: true
-
-- name: Install setuptools
-  apt:
-    name:
-      - python3-setuptools
-      - python-passlib
-    update_cache: true
-  register: installed_packages
-  until: installed_packages is succeeded
   become: true
