--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,7 +14,7 @@
     - files:
         - '{{ ansible_distribution }}.yml'
         - '{{ ansible_os_family }}.yml'
-        - not-supported.yml
+        - default.yml
       ignore: true
   loop_control:
     loop_var: platform_tasks
