Enable all tests
Signed-off-by: Timur Gadiev <Timur_Gadiev@epam.com>

--- a/molecule/cloud-epc-delegated/molecule.yml
+++ b/molecule/cloud-epc-delegated/molecule.yml
@@ -28,7 +28,7 @@ platforms:
       - consul_instances
 provisioner:
   name: ansible
-  log: True
+  log: true
   playbooks:
     create: ../resources/provisioning/EPC/create.yml
     prepare: ../resources/prepare.yml
