--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ Ansible lint:
   tags:
     - aws
 
-.Docker ggr:
+Docker ggr:
   stage: deployment test
   script:
     - molecule test -s default
@@ -43,7 +43,7 @@ AWS ggr:
   tags:
     - aws
 
-.EPC ggr:
+EPC ggr:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
