--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,10 @@ ggt_init_script:
   - ggr-ui.service
   - selenoid-ui.service
 
+ggr_version: 1.6.5
+ggr_ui_version: 1.1.2
+ggr_selenoid_ui_version: 1.9.0
+
 # consul_service_definition:
 #   - consul-ggr-sevice.json
 #   - consul-ggr-ui-sevice.json
