Test verify docker
Signed-off-by: Timur Gadiev <Timur_Gadiev@epam.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ Ansible lint:
 Docker ggr:
   stage: deployment test
   script:
+    - apk add --no-cache unzip
     - molecule test -s default
   tags:
     - aws
