--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -42,7 +42,7 @@ provisioner:
       callback_whitelist: profile_tasks,timer
   playbooks:
     prepare: ../resources/prepare.yml
-    verify: ../resources/tests/verify.yml
+    verify: ../resources/tests/verify_docker.yml
 scenario:
   name: default
 verifier:
