--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,6 +19,10 @@ ggr_version: 1.6.5
 ggr_ui_version: 1.1.2
 ggr_selenoid_ui_version: 1.9.0
 
+ggr_api_users:
+  ggr-users: 'SuperSecretPass098123'
+  health: 'health'
+
 # consul_service_definition:
 #   - consul-ggr-sevice.json
 #   - consul-ggr-ui-sevice.json
