--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -105,11 +105,7 @@
         owner: '{{ ggr_user }}'
         group: '{{ ggr_user }}'
         mode: 0640
-      loop:
-        - key: ggr-users
-          value: 'SuperSecretPass098123'
-        - key: health
-          value: 'health'
+      loop: '{{ ggr_api_users | dict2items }}'
 
     - name: Enable ggr services systemd
       systemd:
